--- a/html/css/main.css
+++ b/html/css/main.css
@@ -417,6 +417,9 @@ body {
     -webkit-transition-property: all;
     -o-transition-property: all;
     transition-property: all;
+    -webkit-transition-timing-function: easy;
+         -o-transition-timing-function: easy;
+            transition-timing-function: easy;
   }
   .content a:hover {
     -webkit-transform: scaleX(1);
@@ -514,6 +517,28 @@ b, .bold {
           flex: 1 0 auto;
 }
 
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.37)), to(rgba(0, 0, 0, 0.37))), rgba(0, 0, 0, 0.37);
+  background: -o-linear-gradient(bottom, rgba(0, 0, 0, 0.37), rgba(0, 0, 0, 0.37)), rgba(0, 0, 0, 0.37);
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.37), rgba(0, 0, 0, 0.37)), rgba(0, 0, 0, 0.37);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.overlay.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
 .noscript {
   position: relative;
   top: 0;
@@ -571,6 +596,18 @@ b, .bold {
   }
 }
 
+.header .menu {
+  display: none;
+}
+
+@media only screen and (min-width: 1200px) {
+  .header .menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
 .header__right {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -592,6 +629,11 @@ b, .bold {
   top: 0px;
   background-color: #fff;
   overflow: hidden;
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  z-index: 1000;
+  width: 100%;
 }
 
 .header__modal.is-open {
@@ -610,18 +652,6 @@ b, .bold {
   top: 23px;
   width: 33px;
   height: 33px;
-}
-
-.header .menu {
-  display: none;
-}
-
-@media only screen and (min-width: 1200px) {
-  .header .menu {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
 }
 
 .header__burger {
@@ -679,22 +709,49 @@ b, .bold {
       flex-wrap: wrap;
 }
 
-.menu__item .icon {
-  margin-left: 10px;
-}
-
-@media only screen and (max-width: 1099px) {
-  .menu__item .icon {
-    width: 16px;
-    height: 16px;
-  }
-}
-
 @media only screen and (min-width: 1200px) {
   .menu__item {
     padding: 0px;
     -webkit-box-shadow: none;
             box-shadow: none;
+    position: relative;
+  }
+}
+
+@media only screen and (min-width: 1200px) and (any-hover: hover) {
+  .menu__item {
+    -webkit-transition-duration: 0.3s;
+         -o-transition-duration: 0.3s;
+            transition-duration: 0.3s;
+    -webkit-transition-property: all;
+    -o-transition-property: all;
+    transition-property: all;
+    -webkit-transition-timing-function: ease-in-out;
+         -o-transition-timing-function: ease-in-out;
+            transition-timing-function: ease-in-out;
+  }
+  .menu__item:hover .menu__level-2 {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
+  .menu__item:hover .icon {
+    -webkit-transform: rotate(-180deg);
+        -ms-transform: rotate(-180deg);
+            transform: rotate(-180deg);
+  }
+}
+
+.menu__item .icon {
+  -webkit-transition: inherit;
+  -o-transition: inherit;
+  transition: inherit;
+}
+
+@media only screen and (max-width: 1199px) {
+  .menu__item .icon {
+    width: 16px;
+    height: 16px;
   }
 }
 
@@ -710,23 +767,54 @@ b, .bold {
     font-size: 22px;
     line-height: 1;
     padding: 10px 0px;
+    color: #1F2345;
   }
 }
 
-.menu__active {
-  background-color: #071D72;
+.menu__arrow {
+  width: 22px;
+  height: 22px;
+  margin-left: 6px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: inherit;
+  -o-transition: inherit;
+  transition: inherit;
 }
 
-.menu__active a {
-  color: #fff;
+.menu__arrow.is-active .icon {
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  -webkit-transform: rotate(-180deg);
+      -ms-transform: rotate(-180deg);
+          transform: rotate(-180deg);
+}
+
+@media only screen and (max-width: 1200px) {
+  .menu__active {
+    background-color: #071D72;
+  }
+  .menu__active a {
+    color: #fff;
+    pointer-events: none;
+  }
 }
 
 .menu__level-2 {
+  -webkit-transition: inherit;
+  -o-transition: inherit;
+  transition: inherit;
   -webkit-box-shadow: inset 0px 3px 10px -5px silver;
           box-shadow: inset 0px 3px 10px -5px silver;
-  margin-left: -22px;
-  padding: 0px 22px;
-  min-width: calc( 100% + 22px * 2);
+  width: 100%;
   padding: 9px 0px;
 }
 
@@ -735,12 +823,94 @@ b, .bold {
     margin-left: 0px;
     -webkit-box-shadow: none;
             box-shadow: none;
+    min-width: 0px;
+    min-width: 246px;
+    width: 100%;
+    border-top: 1px solid #071D72;
+    position: absolute;
+    bottom: 0px;
+    padding: 0px;
+    -webkit-transform: translateY(100%);
+        -ms-transform: translateY(100%);
+            transform: translateY(100%);
+    left: -35px;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    -webkit-box-shadow: -3px 6px 19px rgba(0, 0, 0, 0.12);
+            box-shadow: -3px 6px 19px rgba(0, 0, 0, 0.12);
+  }
+}
+
+@media only screen and (max-width: 1199px) {
+  .menu__level-2 {
+    opacity: 0;
+    -webkit-transform: scaleY(0);
+        -ms-transform: scaleY(0);
+            transform: scaleY(0);
+    visibility: hidden;
+    position: absolute;
+    width: 0px;
+    pointer-events: none;
+    max-height: 0;
+    -webkit-transform-origin: top;
+        -ms-transform-origin: top;
+            transform-origin: top;
+  }
+  .menu__level-2.is-open {
+    width: 100%;
+    position: static;
+    max-height: 1000px;
+    -webkit-transform: scaleY(1);
+        -ms-transform: scaleY(1);
+            transform: scaleY(1);
+    visibility: visible;
+    pointer-events: auto;
+    opacity: 1;
+    -webkit-transition: 0.5s ease-in-out visibility, 0.5s ease-in-out opacity, 0.3s ease-in-out visibility, 0.3s ease-in-out transform;
+    -o-transition: 0.5s ease-in-out visibility, 0.5s ease-in-out opacity, 0.3s ease-in-out visibility, 0.3s ease-in-out transform;
+    transition: 0.5s ease-in-out visibility, 0.5s ease-in-out opacity, 0.3s ease-in-out visibility, 0.3s ease-in-out transform;
   }
 }
 
 .menu__level-2 .menu__item {
   -webkit-box-shadow: none;
           box-shadow: none;
+}
+
+@media only screen and (min-width: 1200px) {
+  .menu__level-2 .menu__item {
+    padding: 20px 33px;
+  }
+}
+
+@media only screen and (min-width: 1200px) and (any-hover: hover) {
+  .menu__level-2 .menu__item {
+    -webkit-transition-duration: 0.3s;
+         -o-transition-duration: 0.3s;
+            transition-duration: 0.3s;
+    -webkit-transition-property: all;
+    -o-transition-property: all;
+    transition-property: all;
+    -webkit-transition-timing-function: easy;
+         -o-transition-timing-function: easy;
+            transition-timing-function: easy;
+  }
+  .menu__level-2 .menu__item:hover {
+    background-color: #ECF5FB;
+  }
+  .menu__level-2 .menu__item:hover a {
+    color: #071D72;
+    font-weight: 700;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .menu__level-2 .menu__item a {
+    -webkit-transition: inherit;
+    -o-transition: inherit;
+    transition: inherit;
+  }
 }
 
 .menu .icon {
