--- a/html/css/main.css
+++ b/html/css/main.css
@@ -377,9 +377,16 @@ button {
 
 body {
   font-family: 'Muller';
-  font-size: 18px;
-  line-height: 1.44;
+  font-size: 14px;
+  line-height: 1.43;
   color: rgba(31, 35, 69, 0.85);
+}
+
+@media only screen and (min-width: 1200px) {
+  body {
+    font-size: 18px;
+    line-height: 1.44;
+  }
 }
 
 .container {
@@ -392,40 +399,6 @@ body {
 .content a {
   color: #071D72;
   position: relative;
-  overflow: hidden;
-}
-
-.content a:before {
-  position: absolute;
-  bottom: 0px;
-  left: 0px;
-  height: 1px;
-  width: 100%;
-  -webkit-transform-origin: left;
-      -ms-transform-origin: left;
-          transform-origin: left;
-  -webkit-transform: scaleX(0);
-      -ms-transform: scaleX(0);
-          transform: scaleX(0);
-}
-
-@media (any-hover: hover) {
-  .content a {
-    -webkit-transition-duration: 0.3s;
-         -o-transition-duration: 0.3s;
-            transition-duration: 0.3s;
-    -webkit-transition-property: all;
-    -o-transition-property: all;
-    transition-property: all;
-    -webkit-transition-timing-function: easy;
-         -o-transition-timing-function: easy;
-            transition-timing-function: easy;
-  }
-  .content a:hover {
-    -webkit-transform: scaleX(1);
-        -ms-transform: scaleX(1);
-            transform: scaleX(1);
-  }
 }
 
 *:focus, *:focus-visible {
@@ -482,8 +455,8 @@ h3, .h3-title {
 h4, .h4-title {
   font-weight: 700;
   color: #071D72;
-  font-size: 18px;
-  line-height: 1.44;
+  font-size: 14px;
+  line-height: 1.57;
 }
 
 @media only screen and (min-width: 1200px) {
@@ -621,9 +594,9 @@ b, .bold {
   padding-top: 64px;
   max-width: 276px;
   height: 100vh;
-  -webkit-transform: translateX(100%);
-      -ms-transform: translateX(100%);
-          transform: translateX(100%);
+  -webkit-transform: translateX(100%) scaleX(0%);
+      -ms-transform: translateX(100%) scaleX(0%);
+          transform: translateX(100%) scaleX(0%);
   position: absolute;
   right: 0px;
   top: 0px;
@@ -637,9 +610,9 @@ b, .bold {
 }
 
 .header__modal.is-open {
-  -webkit-transform: translateX(0%);
-      -ms-transform: translateX(0%);
-          transform: translateX(0%);
+  -webkit-transform: translateX(0%) scaleX(100%);
+      -ms-transform: translateX(0%) scaleX(100%);
+          transform: translateX(0%) scaleX(100%);
 }
 
 .header__modal .menu {
@@ -730,6 +703,10 @@ b, .bold {
          -o-transition-timing-function: ease-in-out;
             transition-timing-function: ease-in-out;
   }
+  .menu__item:hover > a {
+    color: #071D72;
+    font-weight: 700;
+  }
   .menu__item:hover .menu__level-2 {
     opacity: 1;
     visibility: visible;
@@ -757,9 +734,13 @@ b, .bold {
 
 .menu__item a {
   padding: 9px 0px 9px 22px;
+  font-weight: 500;
   font-size: 14px;
   line-height: 1.86;
   color: #071D72;
+  -webkit-transition: inherit;
+  -o-transition: inherit;
+  transition: inherit;
 }
 
 @media only screen and (min-width: 1200px) {
@@ -915,4 +896,362 @@ b, .bold {
 
 .menu .icon {
   fill: rgba(255, 255, 255, 0);
+}
+
+.footer {
+  border-top: 26px solid #071D72;
+  padding-top: 16px;
+}
+
+@media only screen and (min-width: 1200px) {
+  .footer {
+    border-top-width: 48px;
+    padding-top: 28px;
+  }
+}
+
+.footer .logo {
+  margin-bottom: 22px;
+  display: block;
+}
+
+@media only screen and (min-width: 1200px) {
+  .footer .logo {
+    margin-bottom: 33px;
+  }
+}
+
+@media only screen and (max-width: 1199px) {
+  .footer .logo {
+    width: 147px;
+  }
+  .footer .logo img {
+    height: auto;
+  }
+}
+
+.footer .row {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media only screen and (min-width: 768px) {
+  .footer .row {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  @supports ((-moz-column-gap: 20px) or (column-gap: 20px)) {
+    .footer .row {
+      -webkit-column-gap: 20px;
+         -moz-column-gap: 20px;
+              column-gap: 20px;
+    }
+  }
+  @supports not ((-moz-column-gap: 20px) or (column-gap: 20px)) {
+    .footer .row {
+      margin-right: calc( 0px - (20px / 2));
+      margin-left: calc( 0px - (20px / 2));
+    }
+    .footer .row > * {
+      margin-right: calc(20px / 2);
+      margin-left: calc(20px / 2);
+    }
+  }
+}
+
+.footer__left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  max-width: 214px;
+  margin-bottom: 43px;
+}
+
+@supports ((-moz-column-gap: 50px) or (column-gap: 50px)) {
+  .footer__left {
+    -webkit-column-gap: 50px;
+       -moz-column-gap: 50px;
+            column-gap: 50px;
+  }
+}
+
+@supports not ((-moz-column-gap: 50px) or (column-gap: 50px)) {
+  .footer__left {
+    margin-right: calc( 0px - (50px / 2));
+    margin-left: calc( 0px - (50px / 2));
+  }
+  .footer__left > * {
+    margin-right: calc(50px / 2);
+    margin-left: calc(50px / 2);
+  }
+}
+
+@supports (row-gap: 28px) {
+  .footer__left {
+    row-gap: 28px;
+  }
+}
+
+@supports not (row-gap: 28px) {
+  .footer__left {
+    margin-top: -28px;
+  }
+  .footer__left > * {
+    margin-top: 28px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .footer__left {
+    max-width: 500px;
+    margin-bottom: 0px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .footer__left {
+    max-width: 626px;
+  }
+  @supports ((-moz-column-gap: 65px) or (column-gap: 65px)) {
+    .footer__left {
+      -webkit-column-gap: 65px;
+         -moz-column-gap: 65px;
+              column-gap: 65px;
+    }
+  }
+  @supports not ((-moz-column-gap: 65px) or (column-gap: 65px)) {
+    .footer__left {
+      margin-right: calc( 0px - (65px / 2));
+      margin-left: calc( 0px - (65px / 2));
+    }
+    .footer__left > * {
+      margin-right: calc(65px / 2);
+      margin-left: calc(65px / 2);
+    }
+  }
+  @supports (row-gap: 37px) {
+    .footer__left {
+      row-gap: 37px;
+    }
+  }
+  @supports not (row-gap: 37px) {
+    .footer__left {
+      margin-top: -37px;
+    }
+    .footer__left > * {
+      margin-top: 37px;
+    }
+  }
+}
+
+.footer__item a {
+  font-size: 14px;
+  line-height: 1;
+  font-weight: 500;
+  color: #1F2345;
+}
+
+@media (any-hover: hover) {
+  .footer__item a {
+    -webkit-transition-duration: 0.3s;
+         -o-transition-duration: 0.3s;
+            transition-duration: 0.3s;
+    -webkit-transition-property: all;
+    -o-transition-property: all;
+    transition-property: all;
+    -webkit-transition-timing-function: easy;
+         -o-transition-timing-function: easy;
+            transition-timing-function: easy;
+  }
+  .footer__item a:hover {
+    color: #071D72;
+    font-weight: 700;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .footer__item a {
+    font-size: 18px;
+  }
+}
+
+.footer__right .h4-title {
+  line-height: 1;
+  margin-bottom: 14px;
+}
+
+.footer__social-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@supports ((-moz-column-gap: 10px) or (column-gap: 10px)) {
+  .footer__social-row {
+    -webkit-column-gap: 10px;
+       -moz-column-gap: 10px;
+            column-gap: 10px;
+  }
+}
+
+@supports not ((-moz-column-gap: 10px) or (column-gap: 10px)) {
+  .footer__social-row {
+    margin-right: calc( 0px - (10px / 2));
+    margin-left: calc( 0px - (10px / 2));
+  }
+  .footer__social-row > * {
+    margin-right: calc(10px / 2);
+    margin-left: calc(10px / 2);
+  }
+}
+
+.footer__social-item a {
+  width: 55px;
+  height: 31px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-shadow: -3px 6px 19px rgba(0, 0, 0, 0.12);
+          box-shadow: -3px 6px 19px rgba(0, 0, 0, 0.12);
+}
+
+@media only screen and (min-width: 1200px) {
+  .footer__social-item a {
+    width: 96px;
+    height: 55px;
+  }
+}
+
+@media (any-hover: hover) {
+  .footer__social-item a {
+    -webkit-transition-duration: 0.3s;
+         -o-transition-duration: 0.3s;
+            transition-duration: 0.3s;
+    -webkit-transition-property: all;
+    -o-transition-property: all;
+    transition-property: all;
+    -webkit-transition-timing-function: easy;
+         -o-transition-timing-function: easy;
+            transition-timing-function: easy;
+  }
+  .footer__social-item a:hover {
+    -webkit-transform: scale(1.05);
+        -ms-transform: scale(1.05);
+            transform: scale(1.05);
+  }
+}
+
+.footer__social-item a img {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@media only screen and (max-width: 1199px) {
+  .footer__social-item a img {
+    width: 17px;
+    height: 17px;
+  }
+}
+
+.footer__copy {
+  margin-left: -30px;
+  padding: 13px 30px;
+  min-width: calc(100% + 30px * 2);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-top: 1px solid rgba(31, 35, 69, 0.34);
+  margin-top: 43px;
+  position: relative;
+  font-size: 12pxpx;
+  line-height: 1.67;
+}
+
+@media only screen and (min-width: 1200px) {
+  .footer__copy {
+    margin-top: 43px;
+    margin-left: 0px;
+    min-width: 100%;
+    padding-right: 0px;
+    padding-left: 0px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    font-size: 14px;
+  }
+}
+
+.footer__privacy {
+  color: #071D72;
+  position: relative;
+  overflow: hidden;
+  position: absolute;
+  top: -10px;
+  -webkit-transform: translateY(-100%);
+      -ms-transform: translateY(-100%);
+          transform: translateY(-100%);
+  right: 30px;
+}
+
+@media only screen and (min-width: 1200px) {
+  .footer__privacy {
+    top: auto;
+    right: 0px;
+    -webkit-transform: translateY(0%);
+        -ms-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+}
+
+.footer__privacy:before {
+  content: '';
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  height: 1px;
+  width: 100%;
+  -webkit-transform-origin: left;
+      -ms-transform-origin: left;
+          transform-origin: left;
+  -webkit-transform: scaleX(1);
+      -ms-transform: scaleX(1);
+          transform: scaleX(1);
+  -webkit-transition: inherit;
+  -o-transition: inherit;
+  transition: inherit;
+  background-color: currentColor;
+}
+
+@media (any-hover: hover) {
+  .footer__privacy {
+    -webkit-transition-duration: 0.3s;
+         -o-transition-duration: 0.3s;
+            transition-duration: 0.3s;
+    -webkit-transition-property: all;
+    -o-transition-property: all;
+    transition-property: all;
+    -webkit-transition-timing-function: easy;
+         -o-transition-timing-function: easy;
+            transition-timing-function: easy;
+  }
+  .footer__privacy:hover:before {
+    -webkit-transform: scaleX(0);
+        -ms-transform: scaleX(0);
+            transform: scaleX(0);
+  }
 }
