--- a/html/css/main.css
+++ b/html/css/main.css
@@ -40,8 +40,8 @@
 *,
 *:before,
 *:after {
-  -webkit-box-sizing: inherit;
-          box-sizing: inherit;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
@@ -427,6 +427,7 @@ h2, .h2-title {
   font-family: 'GothamPro', sans-serif;
   font-weight: 400;
   color: #071D72;
+  margin-bottom: 24px;
   font-size: 24px;
   line-height: 1.08;
 }
@@ -441,8 +442,8 @@ h2, .h2-title {
 h3, .h3-title {
   font-weight: 700;
   color: #071D72;
-  font-size: 24px;
-  line-height: 1.08;
+  font-size: 18px;
+  line-height: 1.06;
 }
 
 @media only screen and (min-width: 1200px) {
@@ -510,6 +511,32 @@ b, .bold {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
+}
+
+.app-cart {
+  -webkit-box-shadow: -3px 6px 19px rgba(0, 0, 0, 0.12);
+          box-shadow: -3px 6px 19px rgba(0, 0, 0, 0.12);
+  background-color: #fff;
+  display: inline-block;
+}
+
+@media (any-hover: hover) {
+  .app-cart {
+    -webkit-transition-duration: 0.3s;
+         -o-transition-duration: 0.3s;
+            transition-duration: 0.3s;
+    -webkit-transition-property: all;
+    -o-transition-property: all;
+    transition-property: all;
+    -webkit-transition-timing-function: easy;
+         -o-transition-timing-function: easy;
+            transition-timing-function: easy;
+  }
+  .app-cart:hover {
+    -webkit-transform: scale(1.05);
+        -ms-transform: scale(1.05);
+            transform: scale(1.05);
+  }
 }
 
 .noscript {
@@ -711,6 +738,8 @@ b, .bold {
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
+    z-index: 50;
+    background: #fff;
   }
   .menu__item:hover .icon {
     -webkit-transform: rotate(-180deg);
@@ -1123,33 +1152,12 @@ b, .bold {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-shadow: -3px 6px 19px rgba(0, 0, 0, 0.12);
-          box-shadow: -3px 6px 19px rgba(0, 0, 0, 0.12);
 }
 
 @media only screen and (min-width: 1200px) {
   .footer__social-item a {
     width: 96px;
     height: 55px;
-  }
-}
-
-@media (any-hover: hover) {
-  .footer__social-item a {
-    -webkit-transition-duration: 0.3s;
-         -o-transition-duration: 0.3s;
-            transition-duration: 0.3s;
-    -webkit-transition-property: all;
-    -o-transition-property: all;
-    transition-property: all;
-    -webkit-transition-timing-function: easy;
-         -o-transition-timing-function: easy;
-            transition-timing-function: easy;
-  }
-  .footer__social-item a:hover {
-    -webkit-transform: scale(1.05);
-        -ms-transform: scale(1.05);
-            transform: scale(1.05);
   }
 }
 
@@ -1253,5 +1261,122 @@ b, .bold {
     -webkit-transform: scaleX(0);
         -ms-transform: scaleX(0);
             transform: scaleX(0);
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .app {
+    padding: 233px 0px 105px;
+    background-color: #ECF5FB;
+  }
+}
+
+.app__inner {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, auto);
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 24px;
+}
+
+@media only screen and (min-width: 1200px) {
+  .app__inner {
+    padding: 62px 289px 30px;
+    background-color: #fff;
+    grid-template-rows: repeat(2, auto);
+    grid-template-columns: repeat(2, auto);
+    row-gap: 50px;
+    -webkit-column-gap: 75px;
+       -moz-column-gap: 75px;
+            column-gap: 75px;
+    justify-items: start;
+  }
+}
+
+.app__left {
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
+  height: auto;
+}
+
+@media only screen and (min-width: 1200px) {
+  .app__left {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    grid-row: 1 / 3;
+  }
+}
+
+.app__heading {
+  grid-column: 1 / 3;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+}
+
+@media only screen and (min-width: 1200px) {
+  .app__heading {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    grid-column: 2 / 3;
+    align-self: end;
+  }
+}
+
+.app__social {
+  -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
+          order: 3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media only screen and (min-width: 1200px) {
+  .app__social {
+    grid-column: 2 / 3;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    align-self: start;
+  }
+}
+
+.app__item {
+  line-height: 0;
+}
+
+.app__item:not(:last-child) {
+  margin-bottom: 18px;
+}
+
+@media only screen and (min-width: 1200px) {
+  .app__item:not(:last-child) {
+    margin-bottom: 0px;
+    margin-right: 34px;
+  }
+}
+
+.app__item .app-cart {
+  padding: 17px 20px;
+}
+
+@media only screen and (min-width: 1200px) {
+  .app__item .app-cart {
+    padding: 31px 22px;
   }
 }
